[package]
name = "msx_rs"
version = "0.1.0"
edition = "2024"

[dependencies]
bytemuck = { version = "1.25.0", features = ["derive"] }
# Overlay UI. The 0.34 line pins wgpu ^29 / winit ^0.30 — exactly our stack.
# egui-winit has no default features enabled (we don't need its system
# clipboard / link-opener / wayland / x11 extras, and dropping them trims the
# wasm build).
egui = "0.34"
egui-winit = { version = "0.34", default-features = false }
egui-wgpu = "0.34"
# Decodes the embedded hq4x weight LUT (256×256 RGBA PNG) once at startup.
# Pure-Rust inflate (miniz_oxide) — builds for wasm32 too.
png = { version = "0.17", default-features = false }
psg = "1.0"
# Native file dialogs + a wasm `AsyncFileDialog` (over an <input type=file>),
# for the "Open ROM/Disk…" menu items.
rfd = "0.15"
wgpu = "29.0.3"
winit = "0.30"
z80emu = "0.11"
zip = { version = "8.6.0", default-features = false, features = ["deflate"] }

# Native-only: real audio output + a blocking executor for async setup.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
cpal = "0.17"
pollster = "0.4"

# Web-only: bindings to JS, a `spawn_local`-style async runtime, a
# panic hook that surfaces Rust panics to the browser console, and a
# wasm-safe `Instant`/`Duration` (std's panics on `wasm32-unknown-unknown`).
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1"
js-sys = "0.3"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Document", "Window", "Element", "HtmlElement", "HtmlCanvasElement", "CssStyleDeclaration",
    "AudioContext", "AudioContextState", "AudioNode", "AudioDestinationNode", "AudioBuffer",
    "AudioProcessingEvent", "ScriptProcessorNode",
    "Location", "Url", "UrlSearchParams", "Response", "Request", "RequestInit",
    "DragEvent", "DataTransfer", "Blob", "File", "FileList", "Event", "EventTarget",
] }
web-time = "1.1"
